# opengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/core-template/: CMakeLists.txt  Camera.cpp  Camera.hpp  Framebuffer.hpp  VertexBufferLayout.hpp  Window.cpp
src/glass-ui/: CMakeLists.txt  Camera.cpp  Camera.hpp  Framebuffer.cpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.hpp  ex_1.cpp  ex_2.cpp  ex_3.cpp  ex_4.cpp  main.cpp  pch.h
src/glass-ui/shaders/: fragment2.glsl  fragmentBG.glsl  vertex.glsl  vertexBG.glsl
src/glass-ui/shaders/ex_2/: fragment.glsl  vertex.glsl
src/glass-ui/shaders/ex_3/: fragment.glsl  fragment_debug.glsl  fragment_vanilla.glsl  vertex.glsl
src/glass-ui/shaders/ex_4/: fragment.glsl
src/glass-ui/shaders/ex_4/2/: fragment.glsl  vertex.glsl
